2007-10-09  Steffen Macke <sdteffen@sdteffen.de>

	* doc/en/dcwaterdesign.xml: Updated email address, removed duplicated
	About section
	* AUTHORS: Added authors information
	
2007-09-18  Maher Abdel Karim <Maher_karim@dorsch.com.jo>
	
	* dcwatdes.view.digitizepipe:add smaller diameters
	as andereas requested.

2007-02-26  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.view.popup.pipes.seteconomicdiameter.ave: Added DN 110

2007-02-26  Maher Abdel Karim <Maher_karim@dorsch.com.jo>

	* dcwatdes.view.digitizepipe.ave: Added Martin's remarks, closing RFE
	#1648625
	
2007-02-21  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.view.popup.pipes.seteconomicdiameter.ave: Fixed yesterday's addition
	
2007-02-21  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.view.popup.pipes.seteconomicdiameter.ave: Added some more diameters
	< DN 1000, upon Martin's request. However, the flow rates are just made up.
	
2006-11-25  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/docbook.xsl: Enabled saxon extensions, callout graphics
	* doc/en/dcwaterdesign.xml: Improved inp2shp documentation, added more
	XML ids to the document (not finished)

2006-11-24  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* inp2shp.c: Version number is now 0.2.2; more robust and complete import
	* inp2shp/README: Added instructions regarding the EPANET toolkit patches
	* inp2shp/inp2shp.c: adding more error checks; use patched epanet2.dll
	* inp2shp_private.h:
	* inp2shp_private.rc: minor changes
	* inp2shp/patch/epanet_pump.diff:
	* inp2shp/patch/epanet_toolkit_pump.diff: Patches against EPANET 2.0.10.0
	to access pump and curve data through the toolkit
	
2006-11-19  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* inp2shp/inp2shp.c: Improved attribute import of valves and pumps
	(Improvements for bug #1469111); Usage change presumably fixes 
	bug #1598930 - awaiting testing
	* inp2shp/inp2shp.dev:
	* inp2shp/inp2shp_private.h:
	* inp2shp/inp2shp_private.rc: